<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_detail_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.DetailMovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="8dp">

            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/riv_item_poster_received"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:siRadius="8dp"
                android:layout_width="180dp"
                android:layout_height="280dp"
                android:src="@drawable/ic_poster" />

            <TextView
                android:id="@+id/tv_item_movie_title_received"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/riv_item_poster_received"
                app:layout_constraintTop_toTopOf="@+id/riv_item_poster_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
...
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/year_icon"
                android:src="@drawable/ic_year_white" />

            <TextView
                android:id="@+id/tv_item_year_received"
                app:layout_constraintBottom_toBottomOf="@+id/iv_item_year"
                app:layout_constraintStart_toEndOf="@+id/iv_item_year"
                app:layout_constraintTop_toTopOf="@+id/iv_item_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
...
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/genres"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_item_genres_received"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/riv_item_poster_received"
                app:layout_constraintTop_toBottomOf="@+id/tv_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/genres_item"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_item_tagLine_received"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/riv_item_poster_received"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_genres_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_score"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_item_score_received"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score_item"
                        android:textColor="@color/white"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_item_release_date_received"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date_item"
                        android:textColor="@color/white"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_item_popularity_received"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity_item"
                        android:textColor="@color/white"
...
                android:text="@string/overview_title"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_overview_received"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
...
                android:text="@string/production_companies_title"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_production_companies_received"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_production_companies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
