<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

            <RadioGroup
                android:id="@+id/rg_sort_fav_movie_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                app:layout_collapseMode="pin">

                <RadioButton
                    android:id="@+id/rb_sort_by_title_asc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:checked="true"
                    android:textColor="@color/teal_700"
                    android:text="@string/sort_asc" />

                <RadioButton
                    android:id="@+id/rb_sort_by_title_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textColor="@color/teal_700"
                    android:text="@string/sort_desc" />

                <RadioButton
                    android:id="@+id/rb_sort_fav_movies_by_newest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textColor="@color/teal_700"
                    android:text="@string/sort_newest" />

                <RadioButton
                    android:id="@+id/rb_sort_fav_movies_by_oldest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textColor="@color/teal_700"
                    android:text="@string/sort_oldest" />
            </RadioGroup>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/tv_movie_items_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/favored_movies"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite_movie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:splitMotionEvents="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_items_size"
            tools:listitem="@layout/item_list_favorite_movie" />

        <ProgressBar
            android:id="@+id/pb_rv_favorite_movie"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_item_fav_no_available"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/item_not_available"
            android:src="@drawable/ic_item_no_available"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_fav_no_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_item_fav_no_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_not_available"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_item_fav_no_available"
            app:layout_constraintStart_toStartOf="@+id/iv_item_fav_no_available"
            app:layout_constraintTop_toBottomOf="@+id/iv_item_fav_no_available" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_empty_item_fav"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:constraint_referenced_ids="iv_item_fav_no_available,tv_item_fav_no_available"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_fav_no_available"
            app:layout_constraintEnd_toEndOf="@+id/iv_item_fav_no_available"
            app:layout_constraintStart_toStartOf="@+id/iv_item_fav_no_available"
            app:layout_constraintTop_toTopOf="@+id/iv_item_fav_no_available" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>