...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

            <RadioGroup
                android:id="@+id/rg_sort_fav_tv_show_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                app:layout_collapseMode="pin">

                <RadioButton
                    android:id="@+id/rb_sort_by_name_asc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:checked="true"
                    android:text="@string/sort_asc"
                    android:textColor="@color/teal_700" />

                <RadioButton
                    android:id="@+id/rb_sort_by_name_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/sort_desc"
                    android:textColor="@color/teal_700" />

                <RadioButton
                    android:id="@+id/rb_sort_fav_tv_shows_by_newest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/sort_newest"
                    android:textColor="@color/teal_700" />

                <RadioButton
                    android:id="@+id/rb_sort_fav_tv_shows_by_oldest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/sort_oldest"
                    android:textColor="@color/teal_700" />
            </RadioGroup>
...
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite_tv_show"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:splitMotionEvents="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
