<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_detail_tv_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailTvShowFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
                app:siRadius="8dp"
                android:layout_width="180dp"
                android:layout_height="280dp"
                android:src="@drawable/ic_poster" />

            <TextView
                android:id="@+id/tv_item_tv_show_name_received"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/riv_item_poster_received"
                app:layout_constraintTop_toTopOf="@+id/riv_item_poster_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
...
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/year_icon"
                android:src="@drawable/ic_year_white" />

            <TextView
                android:id="@+id/tv_item_first_air_date_received"
                app:layout_constraintBottom_toBottomOf="@+id/iv_item_first_air_date"
                app:layout_constraintStart_toEndOf="@+id/iv_item_first_air_date"
                app:layout_constraintTop_toTopOf="@+id/iv_item_first_air_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
...
